--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,17 +38,38 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+
+    console.log(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const birthDate = inventors.sort((a, b) => a.year - b.year)
+
+    console.table(birthDate);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const lifeTogether = inventors.reduce((sum, curr) => {
+        return sum + (curr.passed - curr.year);
+    }, 0)
+
+    console.log(lifeTogether);
 
     // 5. Sort the inventors by years lived
+    const yearsSorted = inventors.sort((a,b) => {
+        const prevGuy = a.passed - a.year;
+        const currGuy = b.passed - b.year;
+
+        return prevGuy > currGuy;
+    });
+    console.table(yearsSorted);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
@@ -56,10 +77,26 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastNameSort = people.sort((last, next) => {
+        const [aLast, aFirst] = last.split(', ');
+        const [bLast, bFirst] = next.split(', ');
+
+        return aLast > bLast;
+    })
+    console.log(lastNameSort);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transports = data.reduce((obj, item) => {
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+    console.log(transports);
 
   </script>
 </body>
